# neopz

./: .gitignore  Arc3D.vtk  CMakeLists.txt  Doxyfile  Linear.vtk  QuadSphere.vtk  TPZTriangleSphere.vtk  TorusQuad.vtk  Triangle.vtk  Wavy.vtk
.doctrees/: environment.pickle
Analysis/: TPZEigenAnalysis.cpp  TPZEigenAnalysis.h  pzanalysis.cpp
Common/: pzreal.h
Documentation/: pzmainpage.h
LinearSolvers/: TPZEigenSolver.cpp  TPZEigenSolver.h  TPZPetscWrapper.cpp  TPZSlepcEPSHandler.cpp  TPZSlepcSTHandler.cpp
Matrix/: TPZPardisoControl.cpp  TPZPetScMatrix.cpp  TPZPetScMatrix.h  pzfmatrix.cpp  pzfmatrix.h  pzmatrix.cpp  pzskylnsymmat.cpp  pzskylnsymmat.h  pzsysmp.cpp  pzysmp.cpp  pzysmp.h
Mesh/: CMakeLists.txt  TPZCompElDisc.cpp  TPZCompElDisc.h  TPZHCurlNedFLinEl.cpp  TPZHCurlNedFLinElShape.cpp  TPZHCurlNedFLinElShapeScaled.cpp  TPZHCurlNedFTriEl.cpp  TPZHCurlNedFTriEl.h  TPZHCurlNedFTriElShape.cpp  TPZInterfaceEl.cpp  TPZInterfaceEl.h  TPZMultiphysicsInterfaceEl.cpp  TPZSBFemElementGroup.cpp  pzcmesh.h  (+33 more)
Projects/AcousticsFourierAnalysis/: AcousticsFourierAnalysis.cpp  CMakeLists.txt  SPZAcousticData.h  TPZAcousticAnalysis.cpp  TPZAcousticAnalysis.h  TPZAcousticCompMesher.cpp  TPZAcousticCompMesher.h  TPZAcousticFreqDomainAnalysis.cpp  TPZAcousticFreqDomainAnalysis.h  TPZAcousticGeoMesher.cpp  TPZAcousticGeoMesher.h  TPZAcousticTimeDomainAnalysis.cpp  TPZAcousticTimeDomainAnalysis.h  TPZAcousticsSimulation.cpp  TPZAcousticsSimulation.h  TPZMatAcousticsFourier.cpp  TPZMatAcousticsFourier.h  TPZMatAcousticsH1.cpp  TPZMatAcousticsH1.h  TPZMatAcousticsPml.cpp  TPZMatAcousticsPml.h  TPZMatAcousticsTransient.cpp  TPZMatAcousticsTransient.h  concentricMesh.geo  createDirs.sh  realWell.geo  realWellWFilm.geo  wellMesh.geo  wellMeshPML.geo
Projects/AcousticsFourierAnalysis/meshes/: axiRealWell.geo  axiRealWellW.geo  axiRealWellWFilm.geo  axiSymmetricMesh.geo  concentricMesh.geo  realWell.geo  realWellW.geo  wellMesh.geo
Projects/StepFiberAnalysisPzMesh/: CMakeLists.txt  StepFiberAnalysisPzMesh.cpp
(+90 files in other folders)
